Fixed bug with deletions not showing properly.

--- a/index.css
+++ b/index.css
@@ -104,7 +104,6 @@ button:focus {
 
 .deleteButton {
     width: 21px;
-    padding-left: 2px;
 }
 
 #addBookMaxPrice, .maxPrice{
